<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_dollar_sign"
        android:text="$"
        android:gravity="left"
        android:textSize="36sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/tv_answer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_answer"
        android:text="@string/answer"
        android:gravity="right"
        android:textSize="36sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/tv_dollar_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_monthly_payment"
        android:text="@string/monthly_payment"
        android:gravity="right"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_answer" />

    <TextView
        android:id="@+id/tv_purchase_price"
        android:text="@string/purchase_price"
        android:paddingTop="12dp"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/et_purchase_price"
        app:layout_constraintTop_toBottomOf="@id/tv_monthly_payment" />

    <EditText
        android:id="@+id/et_purchase_price"
        android:inputType="number"
        android:textSize="20sp"
        android:gravity="right"
        android:layout_width="180dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_monthly_payment"
        app:layout_constraintStart_toEndOf="@+id/tv_purchase_price"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_downpayment"
        android:text="@string/downpayment"
        android:paddingTop="12dp"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/et_purchase_price"
        app:layout_constraintTop_toBottomOf="@id/tv_purchase_price" />

    <EditText
        android:id="@+id/et_downpayment"
        android:inputType="number"
        android:textSize="20sp"
        android:gravity="right"
        android:layout_width="180dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_purchase_price"
        app:layout_constraintStart_toEndOf="@+id/tv_downpayment"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_interest_rate"
        android:text="@string/interest_rate"
        android:paddingTop="12dp"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/et_interest_rate"
        app:layout_constraintTop_toBottomOf="@id/tv_downpayment" />

    <EditText
        android:id="@+id/et_interest_rate"
        android:inputType="number"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_width="180dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_downpayment"
        app:layout_constraintStart_toEndOf="@+id/tv_interest_rate"
        app:layout_constraintEnd_toStartOf="@id/tv_percent"/>

    <TextView
        android:id="@+id/tv_percent"
        android:text="%"
        android:paddingTop="12dp"
        android:paddingLeft="16dp"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/et_interest_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_downpayment" />

    <TextView
        android:id="@+id/tv_loan_length"
        android:text="@string/loan_length"
        android:paddingTop="12dp"
        android:paddingRight="40dp"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/et_loan_length"
        app:layout_constraintTop_toBottomOf="@id/tv_interest_rate" />

    <EditText
        android:id="@+id/et_loan_length"
        android:hint="@string/of_months"
        android:inputType="number"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_width="180dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_interest_rate"
        app:layout_constraintStart_toEndOf="@+id/tv_loan_length"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>